# netsubcalc

./: .gitignore  LICENSE  README.md  main.py  netsubcalc.py  pyproject.toml  requirements.txt  setup.py  test_netsubcalc.py
.github/workflows/: pylint.yml  tests.yml
netsubcalc/: __init__.py  calc_funcs.py  convert_funcs.py  is_funcs.py  netsubcalc.py  print_funcs.py
tests/: __main__.py  test_calc_funcs.py  test_convert_funcs.py  test_is_funcs.py  test_netsubcalc.py  test_print_funcs.py
